feat(request): make gemini requests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,9 @@ categories = ["encoding"]
 [features]
 ast = []
 convert = []
+request = ["rustls", "url", "anyhow"]
+
+[dependencies]
+rustls = { version = "0.20.5", features = ["dangerous_configuration"], optional = true } # TLS
+url = { version = "2.2.2", optional = true } # URL Validation
+anyhow = { version = "1.0.57", optional = true } # `Result`
