--- a/Makefile.toml
+++ b/Makefile.toml
@@ -14,6 +14,10 @@ command = "cargo"
 args = ["clippy"]
 command = "cargo"
 
+[tasks.test]
+args = ["test", "--all-features"]
+command = "cargo"
+
 # -------------
 # | Executors |
 # -------------
