fix(cargo.toml): convert requires ast

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ categories = ["encoding"]
 
 [features]
 ast = []
-convert = []
+convert = ["ast"]
 request = ["rustls", "url", "anyhow"]
 meta = []
 
