--- a/Makefile.toml
+++ b/Makefile.toml
@@ -23,8 +23,10 @@ command = "cargo"
 # -------------
 [tasks.checkf]
 dependencies = ["fmt", "check"]
-workspace = false
 
 [tasks.checkfc]
 dependencies = ["fmt", "check", "clippy"]
-workspace = false
+
+[tasks.example]
+args = ["run", "--example", "${@}", "--all-features"]
+command = "cargo"
