--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "germ"
-version = "0.2.5"
+version = "0.2.6"
 authors = ["Fuwn <contact@fuwn.me>"]
 edition = "2021"
 description = "The Ultimate Gemini Toolkit."
@@ -17,12 +17,13 @@ categories = ["encoding"]
 [features]
 ast = []
 convert = ["ast"]
-request = ["rustls", "url", "anyhow"]
+default = ["ast", "convert", "meta", "request"]
 meta = []
+request = ["rustls", "url", "anyhow"]
 
 [dependencies]
+anyhow = { version = "1.0.57", optional = true } # `Result`
 rustls = { version = "0.20.5", features = [
   "dangerous_configuration"
 ], optional = true } # TLS
 url = { version = "2.2.2", optional = true } # URL Validation
-anyhow = { version = "1.0.57", optional = true } # `Result`
