--- a/Makefile.toml
+++ b/Makefile.toml
@@ -5,28 +5,35 @@
 args = ["fmt"]
 command = "cargo"
 toolchain = "nightly"
+workspace = false
 
 [tasks.check]
 args = ["check", "--all-features"]
 command = "cargo"
+workspace = false
 
 [tasks.clippy]
 args = ["clippy", "--all-features"]
 command = "cargo"
+workspace = false
 
 [tasks.test]
 args = ["test", "--all-features"]
 command = "cargo"
+workspace = false
 
 # -------------
 # | Executors |
 # -------------
 [tasks.checkf]
 dependencies = ["fmt", "check"]
+workspace = false
 
 [tasks.checkfc]
 dependencies = ["fmt", "check", "clippy"]
+workspace = false
 
 [tasks.example]
 args = ["run", "--example", "${@}", "--all-features"]
 command = "cargo"
+workspace = false
