--- a/crates/germ-macros-impl/Cargo.toml
+++ b/crates/germ-macros-impl/Cargo.toml
@@ -2,12 +2,12 @@
 
 [package]
 name = "germ-macros-impl"
-version = "0.2.8"
+version = "0.1.0"
 authors = ["Fuwn <contact@fuwn.me>"]
 edition = "2021"
-description = "The Ultimate Gemini Toolkit."
+description = "Germ Macro Implementations"
 documentation = "https://docs.rs/germ"
-readme = "README.md"
+readme = "../../../README.md"
 homepage = "https://github.com/gemrest/germ"
 repository = "https://github.com/gemrest/germ"
 license = "GPL-3.0-only"
