--- a/crates/germ/Cargo.toml
+++ b/crates/germ/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "germ"
-version = "0.2.8"
+version = "0.3.0"
 authors = ["Fuwn <contact@fuwn.me>"]
 edition = "2021"
 description = "The Ultimate Gemini Toolkit."
@@ -18,7 +18,7 @@ categories = ["encoding"]
 ast = []
 convert = ["ast"]
 default = ["ast", "convert", "meta", "request"]
-macros = ["ast", "convert", "meta"]
+macros = ["ast", "convert"]
 meta = []
 request = ["rustls", "url", "anyhow"]
 
