fix(crates): readme location

--- a/crates/germ/Cargo.toml
+++ b/crates/germ/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Fuwn <contact@fuwn.me>"]
 edition = "2021"
 description = "The Ultimate Gemini Toolkit."
 documentation = "https://docs.rs/germ"
-readme = "../../../README.md"
+readme = "../../README.md"
 homepage = "https://github.com/gemrest/germ"
 repository = "https://github.com/gemrest/germ"
 license = "GPL-3.0-only"
