--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [workspace]
-members = ["crates/germ", "crates/germ-macros-impl"]
+members = ["germ", "germ-macros-impl"]
