chore(git): ignore vscode files

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # Rust
-target/
+target
 Cargo.lock
 
-# IDE
-.idea/
+# CLion
+.idea
 
 # Artifacts
 examples/*.md
 examples/*.html
+
+# Visual Studio Code
+.vscode
