--- a/crates/germ/Cargo.toml
+++ b/crates/germ/Cargo.toml
@@ -22,6 +22,7 @@ macros = ["ast", "convert", "germ-macros-impl"]
 meta = []
 request = ["rustls", "url", "anyhow"]
 quick = []
+sync = ["tokio", "tokio-rustls"]
 
 [dependencies]
 anyhow = { version = "1.0.70", optional = true } # `Result`
@@ -29,4 +30,6 @@ germ-macros-impl = { path = "../germ-macros-impl", version = "0.1.0", optional =
 rustls = { version = "0.21.0", features = [
   "dangerous_configuration"
 ], optional = true } # TLS
+tokio-rustls = { version = "0.24.0", optional = true } # Non-blocking TLS
+tokio = { version = "1.27.0", optional = true, default-features = false, features = ["net", "io-util", "rt-multi-thread", "macros"] } # Non-blocking I/O
 url = { version = "2.3.1", optional = true } # URL Validation
